some minor fixes from index file

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,9 +15,8 @@
         <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
             <a class="navbar-brand" href="/">
             <img src="{{ url_for('static', filename='logo.png') }}" class="img-fluid"/>
-            </a><button class="btn btn-link btn-sm order-1 order-lg-0" id="sidebarToggle" href="#"><i class="fas fa-bars"></i></button
-            ><!-- Navbar Search-->
-            <!-- Navbar-->
+            </a><button class="btn btn-link btn-sm order-1 order-lg-0" id="sidebarToggle" href="#"><i class="fas fa-bars"></i></button>
+	    <!-- Navbar-->
             <ul class="navbar-nav ml-auto ml-md-0">
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" id="userDropdown" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
@@ -88,7 +87,7 @@
                                 <div class="card bg-danger text-white mb-4">
                                     <div class="card-body">{{ data.notfound }}</div>
                                     <div class="card-footer d-flex align-items-center justify-content-between">
-                                        <div class="small text-white">Total Not-Found SMSs</div>
+                                        <div class="small text-white">Total Not-Found Messages</div>
                                     </div>
                                 </div>
                             </div>
