--- a/app/templates/db_status.html
+++ b/app/templates/db_status.html
@@ -57,7 +57,7 @@
             <div id="layoutSidenav_content">
                 <main>
                     <div class="container-fluid">
-                        <h1 class="mt-4">DB Status Dashboard</h1>
+                        <h1 class="mt-4">DB Status</h1>
                         {% include 'alert.html' %}
                         <div class="row">
                             <div class="col-xl-3 col-md-6">
