addinte text1 and text2 to the excel file

--- a/app/templates/copyleft.html
+++ b/app/templates/copyleft.html
@@ -2,4 +2,6 @@
     <script type="text/javascript">
         document.write(new Date().getFullYear());
     </script>
+    <br />
+    <small>Version 1.4</small>
 </div>
